versioned_docs/version-2.18/reference/subsystems/nodejs-infer.mdx
---
title: nodejs-infer
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options controlling which dependencies will be inferred for javascript targets.

Backend: <span className="color--primary">`pants.backend.experimental.openapi.lint.spectral`</span>

Config section: <span className="color--primary">`[nodejs-infer]`</span>

<span className={styles.options}>

## Basic options

### `imports`

<Option
  cli_repr={`--[no-]nodejs-infer-imports`}
  env_repr='PANTS_NODEJS_INFER_IMPORTS'
  toml_repr={`[nodejs-infer]
imports = <bool>`}
  default_repr={`True`}
>

Infer a target&#x27;s imported dependencies by parsing import statements from sources.

To ignore a false positive, you can either put `// pants: no-infer-dep` on the line of the import or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `package_json_entry_points`

<Option
  cli_repr={`--[no-]nodejs-infer-package-json-entry-points`}
  env_repr='PANTS_NODEJS_INFER_PACKAGE_JSON_ENTRY_POINTS'
  toml_repr={`[nodejs-infer]
package_json_entry_points = <bool>`}
  default_repr={`True`}
>

Infer a `package_json`&#x27;s dependencies by parsing entry point statements from the package.json file.

To ignore a false positive, you can put `!{bad_address}` in the `dependencies` field of the `package_json` target.

See https://nodejs.org/api/packages.html#package-entry-points and
https://docs.npmjs.com/cli/v9/configuring-npm/package-json#browser.

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
