versioned_docs/version-2.25/reference/subsystems/nodejs-infer.mdx
---
title: nodejs-infer
description: |
  Options controlling which dependencies will be inferred for javascript targets.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options controlling which dependencies will be inferred for javascript targets.

Backend: <span className="color--primary">`pants.backend.experimental.javascript.lint.prettier`</span>

Config section: <span className="color--primary">`[nodejs-infer]`</span>

<span className={styles.options}>

## Basic options

### `imports`

<Option
  cli_repr={`--[no-]nodejs-infer-imports`}
  env_repr='PANTS_NODEJS_INFER_IMPORTS'
  toml_repr={`[nodejs-infer]
imports = <bool>`}
  default_repr={`True`}
>

Infer a target&#x27;s imported dependencies by parsing import statements from sources.

To ignore a false positive, you can either put `// pants: no-infer-dep` on the line of the import or put `!{bad_address}` in the `dependencies` field of your target.

</Option>

### `package_json_entry_points`

<Option
  cli_repr={`--[no-]nodejs-infer-package-json-entry-points`}
  env_repr='PANTS_NODEJS_INFER_PACKAGE_JSON_ENTRY_POINTS'
  toml_repr={`[nodejs-infer]
package_json_entry_points = <bool>`}
  default_repr={`True`}
>

Infer a `package_json`&#x27;s dependencies by parsing entry point statements from the package.json file.

To ignore a false positive, you can put `!{bad_address}` in the `dependencies` field of the `package_json` target.

See https://nodejs.org/api/packages.html#package-entry-points and
https://docs.npmjs.com/cli/v9/configuring-npm/package-json#browser.

</Option>

### `unowned_dependency_behavior`

<Option
  cli_repr={`--nodejs-infer-unowned-dependency-behavior=<UnownedDependencyUsage>`}
  env_repr='PANTS_NODEJS_INFER_UNOWNED_DEPENDENCY_BEHAVIOR'
  toml_repr={`[nodejs-infer]
unowned_dependency_behavior = <UnownedDependencyUsage>`}
  one_of='error, warning, ignore'
  default_repr={`warning`}
>

How to handle imports that don&#x27;t have an inferrable owner.

Usually when an import cannot be inferred, it represents an issue like Pants not being properly configured, e.g. targets not set up. Often, missing dependencies will result in confusing runtime errors like `Error: ENOENT: no such file or directory`, so this option can be helpful to error more eagerly.

To ignore any false positives, add `// pants: no-infer-dep` to the line of the import

</Option>

## Advanced options

None

## Deprecated options

None

## Related subsystems

None

</span>
